#6056 Fix spaces in path for version check